--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Example Restaurant Chatbot</title>
     <style>
         body, html {
@@ -21,12 +21,12 @@
             background: #ffffff;
             padding: 5px 10px; /* Reduced padding */
             box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-            height: 40px; /* Shrunk header height */
+            height: 50px; /* Smaller header */
             box-sizing: border-box;
         }
         .header h1 {
             margin: 0;
-            font-size: 16px; /* Reduced font size */
+            font-size: 16px;
             text-align: center;
             flex: 1;
         }
@@ -38,23 +38,23 @@
             cursor: pointer;
         }
         .logo-container img {
-            width: 25px; /* Shrunk width */
-            height: 25px; /* Shrunk height */
+            width: 25px;
+            height: 25px;
             margin-right: 3px;
         }
         .back-arrow {
-            font-size: 16px; /* Reduced font size */
+            font-size: 16px;
             color: #333;
             text-decoration: none;
         }
         .chatbot-container {
-            height: calc(100vh - 40px); /* Full height minus header */
+            height: calc(100vh - 50px); /* Full height minus header */
             width: 100%;
             display: flex;
             justify-content: center;
             align-items: center;
             box-sizing: border-box;
-            overflow-y: hidden; /* Prevent internal scrollbars */
+            overflow: hidden; /* Prevent internal scrollbars */
         }
         iframe {
             width: 100%;
@@ -64,12 +64,18 @@
         
         /* Responsive Styles for Mobile */
         @media (max-width: 768px) {
+            .header {
+                height: 40px; /* Even smaller height for mobile */
+            }
+            .header h1 {
+                font-size: 14px; /* Smaller font for the title */
+            }
             .chatbot-container {
-                height: calc(80vh - 40px); /* Smaller height on mobile */
+                height: calc(100vh - 40px); /* Adjusted height for the full view */
             }
             iframe {
-                height: calc(80vh - 40px); /* Bring the height way up */
-                min-height: 400px; /* Shrunk min height */
+                height: calc(100vh - 40px); /* Ensure the iframe fits within the screen */
+                min-height: 100%; /* Full height */
             }
         }
     </style>
@@ -89,7 +95,7 @@
         <iframe
             src="https://www.chatbase.co/chatbot-iframe/kj9_Q0PHlXhmXatHD8h42"
             width="100%"
-            style="height: 100%; min-height: 400px;"
+            style="height: 100%; min-height: 100%;"
             frameborder="0">
         </iframe>
     </div>
