--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Example Restaurant Chatbot</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <title>Restaurant Chatbot</title>
     <style>
         body, html {
             margin: 0;
@@ -13,91 +13,19 @@
             overflow: hidden;
             font-family: Arial, sans-serif;
         }
-        .header {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            position: relative;
-            background: #ffffff;
-            padding: 5px 10px; /* Reduced padding */
-            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-            height: 50px; /* Smaller header */
-            box-sizing: border-box;
-        }
-        .header h1 {
-            margin: 0;
-            font-size: 16px;
-            text-align: center;
-            flex: 1;
-        }
-        .logo-container {
-            position: absolute;
-            left: 5px;
-            display: flex;
-            align-items: center;
-            cursor: pointer;
-        }
-        .logo-container img {
-            width: 25px;
-            height: 25px;
-            margin-right: 3px;
-        }
-        .back-arrow {
-            font-size: 16px;
-            color: #333;
-            text-decoration: none;
-        }
-        .chatbot-container {
-            height: calc(100vh - 50px); /* Full height minus header */
-            width: 100%;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            box-sizing: border-box;
-            overflow: hidden; /* Prevent internal scrollbars */
-        }
         iframe {
             width: 100%;
             height: 100%;
             border: none;
-        }
-        
-        /* Responsive Styles for Mobile */
-        @media (max-width: 768px) {
-            .header {
-                height: 40px; /* Even smaller height for mobile */
-            }
-            .header h1 {
-                font-size: 14px; /* Smaller font for the title */
-            }
-            .chatbot-container {
-                height: calc(100vh - 40px); /* Adjusted height for the full view */
-            }
-            iframe {
-                height: calc(100vh - 40px); /* Ensure the iframe fits within the screen */
-                min-height: 100%; /* Full height */
-            }
+            display: block;
         }
     </style>
 </head>
 <body>
-    <!-- Header Section with Logo and Back Arrow -->
-    <div class="header">
-        <div class="logo-container" onclick="window.location.href='https://askbrie.co.uk';">
-            <span class="back-arrow">←</span>
-            <img src="colored_logo.png" alt="Brie Logo">
-        </div>
-        <h1>Example Restaurant Chatbot</h1>
-    </div>
-
-    <!-- Chatbot Iframe Section -->
-    <div class="chatbot-container">
-        <iframe
-            src="https://www.chatbase.co/chatbot-iframe/kj9_Q0PHlXhmXatHD8h42"
-            width="100%"
-            style="height: 100%; min-height: 100%;"
-            frameborder="0">
-        </iframe>
-    </div>
+    <!-- Chatbot Iframe Only -->
+    <iframe
+        src="https://www.chatbase.co/chatbot-iframe/kj9_Q0PHlXhmXatHD8h42"
+        frameborder="0">
+    </iframe>
 </body>
 </html>
